--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table bgcolor='antiquewhite' align='center'>
 <tr>
 <td align='right'>First Player</td>
-<td><input type='text' name='player1'></td>
+<td><input type='text' name='Ruben'></td>
 </tr>
 <tr>
 <td align='right'>Second Player</td>
